@@ -1,3 +1,8 @@
+2016-01-11  Tom de Vries  <tom@codesourcery.com>
+
+	PR tree-optimization/69108
+	* gcc.dg/autopar/pr69108.c: New test.
+
 2016-01-10  Patrick Palka  <ppalka@gcc.gnu.org>
 
 	PR c++/69029
